# inotify_realtime

./: CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
include/custom/: EpollWrapper.cpp
src/: CMakeLists.txt  DirectoryMgr.cpp  DirectoryMgr.h  FdMgr.cpp  FdMgr.h  InotiMgr.cpp  InotiMgr.h  InotifyEventHandler.cpp  InotifyEventHandler.h  InotifyMask.cpp  InotifyMask.h  InotifyWatchMgr.cpp  InotifyWatchMgr.h  RealtimeConfig.cpp  RealtimeConfig.h  RealtimeConfig.hpp  RealtimeCore.cpp  RealtimeCore.h  RealtimeInterface.cpp  RealtimeInterface.h  main.cpp
src/common/: WaitSignalKill.hpp
